lib/parser.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = peg$FAILED,
        peg$c1 = [],
        peg$c2 = function(s) {return s},
        peg$c3 = { type: "other", description: "Statement" },
        peg$c4 = { type: "other", description: "Nested Statement" },
        peg$c5 = { type: "other", description: "CCSS" },
        peg$c6 = function(ccss) { 
            return {type:'constraint', cssText: p.stringify(ccss)}; 
          },
        peg$c7 = "@",
        peg$c8 = { type: "literal", value: "@", description: "\"@\"" },
        peg$c9 = null,
        peg$c10 = "-gss-",
        peg$c11 = { type: "literal", value: "-gss-", description: "\"-gss-\"" },
        peg$c12 = "stay",
        peg$c13 = { type: "literal", value: "stay", description: "\"stay\"" },
        peg$c14 = function(stay) { 
            return {type:'constraint', cssText: p.stringify(stay)}; 
          },
        peg$c15 = "chain",
        peg$c16 = { type: "literal", value: "chain", description: "\"chain\"" },
        peg$c17 = function(chain) { 
            return {type:'constraint', cssText: p.stringify(chain)}; 
          },
        peg$c18 = "for-each",
        peg$c19 = { type: "literal", value: "for-each", description: "\"for-each\"" },
        peg$c20 = "for-all",
        peg$c21 = { type: "literal", value: "for-all", description: "\"for-all\"" },
        peg$c22 = /^[^`]/,
        peg$c23 = { type: "class", value: "[^`]", description: "[^`]" },
        peg$c24 = "```",
        peg$c25 = { type: "literal", value: "```", description: "\"```\"" },
        peg$c26 = function(forlooper) { 
            return {type:'constraint', cssText: p.stringify(forlooper)}; 
          },
        peg$c27 = /^[a-zA-Z0-9_#.[\]\-""' *+\/$\^~%\\()~]/,
        peg$c28 = { type: "class", value: "[a-zA-Z0-9_#.[\\]\\-\"\"' *+\\/$\\^~%\\\\()~]", description: "[a-zA-Z0-9_#.[\\]\\-\"\"' *+\\/$\\^~%\\\\()~]" },
        peg$c29 = "::",
        peg$c30 = { type: "literal", value: "::", description: "\"::\"" },
        peg$c31 = ":",
        peg$c32 = { type: "literal", value: ":", description: "\":\"" },
        peg$c33 = /^[a-zA-Z0-9_\-]/,
        peg$c34 = { type: "class", value: "[a-zA-Z0-9_\\-]", description: "[a-zA-Z0-9_\\-]" },
        peg$c35 = "(",
        peg$c36 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c37 = ">=",
        peg$c38 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c39 = "==",
        peg$c40 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c41 = "<=",
        peg$c42 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c43 = "=>",
        peg$c44 = { type: "literal", value: "=>", description: "\"=>\"" },
        peg$c45 = "=<",
        peg$c46 = { type: "literal", value: "=<", description: "\"=<\"" },
        peg$c47 = { type: "other", description: "Contextual CCSS Statement" },
        peg$c48 = /^[a-zA-Z0-9\-_$]/,
        peg$c49 = { type: "class", value: "[a-zA-Z0-9\\-_$]", description: "[a-zA-Z0-9\\-_$]" },
        peg$c50 = function(prop, op, tail) {
              return {type:'constraint', cssText: "::["+p.trim(prop)+"]"+" "+op+" "+p.stringify(tail)};
            },
        peg$c51 = { type: "other", description: "CSS Line" },
        peg$c52 = function(key, val) { return {type:'style', key:key, val:val}; },
        peg$c53 = "@-gss-",
        peg$c54 = { type: "literal", value: "@-gss-", description: "\"@-gss-\"" },
        peg$c55 = "horizontal",
        peg$c56 = { type: "literal", value: "horizontal", description: "\"horizontal\"" },
        peg$c57 = "vertical",
        peg$c58 = { type: "literal", value: "vertical", description: "\"vertical\"" },
        peg$c59 = "h",
        peg$c60 = { type: "literal", value: "h", description: "\"h\"" },
        peg$c61 = "v",
        peg$c62 = { type: "literal", value: "v", description: "\"v\"" },
        peg$c63 = function(vfl) { return ['vfl', parser.stringify(vfl)]; },
        peg$c64 = "layout",
        peg$c65 = { type: "literal", value: "layout", description: "\"layout\"" },
        peg$c66 = "template",
        peg$c67 = { type: "literal", value: "template", description: "\"template\"" },
        peg$c68 = function(gtl) { return ['gtl', parser.stringify(gtl)]; },
        peg$c69 = function(block) { return ['css', parser.stringify(block)]; },
        peg$c70 = { type: "other", description: "Ruleset" },
        peg$c71 = function(sel, s) {
            return {type:'ruleset',selectors:sel,rules:s};
          },
        peg$c72 = { type: "other", description: "Directive" },
        peg$c73 = /^[^@{};]/,
        peg$c74 = { type: "class", value: "[^@{};]", description: "[^@{};]" },
        peg$c75 = function(name, terms, s) {
            var o;
            o = {type:'directive',name:p.trim(name),terms:p.trim(terms)};
            if (!!s) {o.rules = s;}
            return o;
          },
        peg$c76 = function(name, terms) {
            var o;
            o = {type:'directive',name:p.trim(name),terms:p.trim(terms)};    
            return o;
          },
        peg$c77 = { type: "other", description: "Directive Name" },
        peg$c78 = function(name) {return p.trim(name);},
        peg$c79 = { type: "other", description: "Statement Blocks" },
        peg$c80 = "{",
        peg$c81 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c82 = "}",
        peg$c83 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c84 = function(s) {return s;},
        peg$c85 = { type: "other", description: "SelectorList" },
        peg$c86 = function(sel, sels) {return [sel].concat(sels)},
        peg$c87 = ",",
        peg$c88 = { type: "literal", value: ",", description: "\",\"" },
        peg$c89 = function(sel) {return sel},
        peg$c90 = { type: "other", description: "Selector" },
        peg$c91 = /^[^@{},;]/,
        peg$c92 = { type: "class", value: "[^@{},;]", description: "[^@{},;]" },
        peg$c93 = function(sel) {return sel.join("").trim()},
        peg$c94 = { type: "other", description: "Comment" },
        peg$c95 = "/*",
        peg$c96 = { type: "literal", value: "/*", description: "\"/*\"" },
        peg$c97 = /^[^*]/,
        peg$c98 = { type: "class", value: "[^*]", description: "[^*]" },
        peg$c99 = "*",
        peg$c100 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c101 = /^[^\/*]/,
        peg$c102 = { type: "class", value: "[^\\/*]", description: "[^\\/*]" },
        peg$c103 = "/",
        peg$c104 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c105 = function() {return ""},
        peg$c106 = { type: "other", description: "Space" },
        peg$c107 = " ",
        peg$c108 = { type: "literal", value: " ", description: "\" \"" },
        peg$c109 = /^[\t]/,
        peg$c110 = { type: "class", value: "[\\t]", description: "[\\t]" },
        peg$c111 = /^[\xA0]/,
        peg$c112 = { type: "class", value: "[\\xA0]", description: "[\\xA0]" },
        peg$c113 = /^[a-zA-Z0-9 .,#:+?!\^=()_\-$*\/\\""']/,
        peg$c114 = { type: "class", value: "[a-zA-Z0-9 .,#:+?!\\^=()_\\-$*\\/\\\\\"\"']", description: "[a-zA-Z0-9 .,#:+?!\\^=()_\\-$*\\/\\\\\"\"']" },
        peg$c115 = { type: "other", description: "multitoend" },
        peg$c116 = /^[^}]/,
        peg$c117 = { type: "class", value: "[^}]", description: "[^}]" },
        peg$c118 = { type: "other", description: "anytoend" },
        peg$c119 = /^[^;]/,
        peg$c120 = { type: "class", value: "[^;]", description: "[^;]" },
        peg$c121 = ";",
        peg$c122 = { type: "literal", value: ";", description: "\";\"" },
        peg$c123 = { type: "other", description: "TextToColon" },
        peg$c124 = /^[^:{}]/,
        peg$c125 = { type: "class", value: "[^:{}]", description: "[^:{}]" },
        peg$c126 = function(text) {return p.stringify(text)},
        peg$c127 = { type: "other", description: "TextToSemicolon" },
        peg$c128 = /^[^;{}]/,
        peg$c129 = { type: "class", value: "[^;{}]", description: "[^;{}]" },
        peg$c130 = { type: "other", description: "LineTerminator" },
        peg$c131 = /^[\n\r\u2028\u2029]/,
        peg$c132 = { type: "class", value: "[\\n\\r\\u2028\\u2029]", description: "[\\n\\r\\u2028\\u2029]" },
        peg$c133 = "\r\n",
        peg$c134 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parsestatements();

      return s0;
    }

    function peg$parsestatements() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseLineTerminator();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseLineTerminator();
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsestatement();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parsestatement();
          }
        } else {
          s2 = peg$c0;
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parseLineTerminator();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parseLineTerminator();
          }
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c2(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parse_();
      }

      return s0;
    }

    function peg$parsestatement() {
      var s0, s1;

      peg$silentFails++;
      s0 = peg$parseRuleset();
      if (s0 === peg$FAILED) {
        s0 = peg$parseccss();
        if (s0 === peg$FAILED) {
          s0 = peg$parseDirective();
          if (s0 === peg$FAILED) {
            s0 = peg$parsecssLine();
          }
        }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }

      return s0;
    }

    function peg$parsenestedStatement() {
      var s0, s1;

      peg$silentFails++;
      s0 = peg$parseRuleset();
      if (s0 === peg$FAILED) {
        s0 = peg$parseccss();
        if (s0 === peg$FAILED) {
          s0 = peg$parseDirective();
          if (s0 === peg$FAILED) {
            s0 = peg$parseContextualCCSSLine();
            if (s0 === peg$FAILED) {
              s0 = peg$parsecssLine();
            }
          }
        }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }

      return s0;
    }

    function peg$parsenestedStatements() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseLineTerminator();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseLineTerminator();
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsenestedStatement();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsenestedStatement();
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parseLineTerminator();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parseLineTerminator();
          }
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c2(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parse_();
      }

      return s0;
    }

    function peg$parseccss() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseccssStartChar();
        if (s4 !== peg$FAILED) {
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parseccssStartChar();
          }
        } else {
          s3 = peg$c0;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseccssOp();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseanytoend();
              if (s6 !== peg$FAILED) {
                s2 = [s2, s3, s4, s5, s6];
                s1 = s2;
              } else {
                peg$currPos = s1;
                s1 = peg$c0;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$c0;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$c0;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$c0;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$c0;
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c6(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$currPos;
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 64) {
            s3 = peg$c7;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c8); }
          }
          if (s3 !== peg$FAILED) {
            if (input.substr(peg$currPos, 5) === peg$c10) {
              s4 = peg$c10;
              peg$currPos += 5;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c11); }
            }
            if (s4 === peg$FAILED) {
              s4 = peg$c9;
            }
            if (s4 !== peg$FAILED) {
              if (input.substr(peg$currPos, 4) === peg$c12) {
                s5 = peg$c12;
                peg$currPos += 4;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c13); }
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parseanytoend();
                if (s6 !== peg$FAILED) {
                  s2 = [s2, s3, s4, s5, s6];
                  s1 = s2;
                } else {
                  peg$currPos = s1;
                  s1 = peg$c0;
                }
              } else {
                peg$currPos = s1;
                s1 = peg$c0;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$c0;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$c0;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$c0;
        }
        if (s1 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c14(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$currPos;
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 64) {
              s3 = peg$c7;
              peg$currPos++;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c8); }
            }
            if (s3 !== peg$FAILED) {
              if (input.substr(peg$currPos, 5) === peg$c10) {
                s4 = peg$c10;
                peg$currPos += 5;
              } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c11); }
              }
              if (s4 === peg$FAILED) {
                s4 = peg$c9;
              }
              if (s4 !== peg$FAILED) {
                if (input.substr(peg$currPos, 5) === peg$c15) {
                  s5 = peg$c15;
                  peg$currPos += 5;
                } else {
                  s5 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c16); }
                }
                if (s5 !== peg$FAILED) {
                  s6 = peg$parseanytoend();
                  if (s6 !== peg$FAILED) {
                    s2 = [s2, s3, s4, s5, s6];
                    s1 = s2;
                  } else {
                    peg$currPos = s1;
                    s1 = peg$c0;
                  }
                } else {
                  peg$currPos = s1;
                  s1 = peg$c0;
                }
              } else {
                peg$currPos = s1;
                s1 = peg$c0;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$c0;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$c0;
          }
          if (s1 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c17(s1);
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$currPos;
            s2 = peg$parse_();
            if (s2 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 64) {
                s3 = peg$c7;
                peg$currPos++;
              } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c8); }
              }
              if (s3 !== peg$FAILED) {
                if (input.substr(peg$currPos, 5) === peg$c10) {
                  s4 = peg$c10;
                  peg$currPos += 5;
                } else {
                  s4 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c11); }
                }
                if (s4 === peg$FAILED) {
                  s4 = peg$c9;
                }
                if (s4 !== peg$FAILED) {
                  if (input.substr(peg$currPos, 8) === peg$c18) {
                    s5 = peg$c18;
                    peg$currPos += 8;
                  } else {
                    s5 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c19); }
                  }
                  if (s5 === peg$FAILED) {
                    if (input.substr(peg$currPos, 7) === peg$c20) {
                      s5 = peg$c20;
                      peg$currPos += 7;
                    } else {
                      s5 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c21); }
                    }
                  }
                  if (s5 !== peg$FAILED) {
                    s6 = [];
                    if (peg$c22.test(input.charAt(peg$currPos))) {
                      s7 = input.charAt(peg$currPos);
                      peg$currPos++;
                    } else {
                      s7 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c23); }
                    }
                    if (s7 !== peg$FAILED) {
                      while (s7 !== peg$FAILED) {
                        s6.push(s7);
                        if (peg$c22.test(input.charAt(peg$currPos))) {
                          s7 = input.charAt(peg$currPos);
                          peg$currPos++;
                        } else {
                          s7 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c23); }
                        }
                      }
                    } else {
                      s6 = peg$c0;
                    }
                    if (s6 !== peg$FAILED) {
                      if (input.substr(peg$currPos, 3) === peg$c24) {
                        s7 = peg$c24;
                        peg$currPos += 3;
                      } else {
                        s7 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c25); }
                      }
                      if (s7 !== peg$FAILED) {
                        s8 = [];
                        if (peg$c22.test(input.charAt(peg$currPos))) {
                          s9 = input.charAt(peg$currPos);
                          peg$currPos++;
                        } else {
                          s9 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c23); }
                        }
                        if (s9 !== peg$FAILED) {
                          while (s9 !== peg$FAILED) {
                            s8.push(s9);
                            if (peg$c22.test(input.charAt(peg$currPos))) {
                              s9 = input.charAt(peg$currPos);
                              peg$currPos++;
                            } else {
                              s9 = peg$FAILED;
                              if (peg$silentFails === 0) { peg$fail(peg$c23); }
                            }
                          }
                        } else {
                          s8 = peg$c0;
                        }
                        if (s8 !== peg$FAILED) {
                          if (input.substr(peg$currPos, 3) === peg$c24) {
                            s9 = peg$c24;
                            peg$currPos += 3;
                          } else {
                            s9 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c25); }
                          }
                          if (s9 !== peg$FAILED) {
                            s10 = peg$parseanytoend();
                            if (s10 !== peg$FAILED) {
                              s2 = [s2, s3, s4, s5, s6, s7, s8, s9, s10];
                              s1 = s2;
                            } else {
                              peg$currPos = s1;
                              s1 = peg$c0;
                            }
                          } else {
                            peg$currPos = s1;
                            s1 = peg$c0;
                          }
                        } else {
                          peg$currPos = s1;
                          s1 = peg$c0;
                        }
                      } else {
                        peg$currPos = s1;
                        s1 = peg$c0;
                      }
                    } else {
                      peg$currPos = s1;
                      s1 = peg$c0;
                    }
                  } else {
                    peg$currPos = s1;
                    s1 = peg$c0;
                  }
                } else {
                  peg$currPos = s1;
                  s1 = peg$c0;
                }
              } else {
                peg$currPos = s1;
                s1 = peg$c0;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$c0;
            }
            if (s1 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c26(s1);
            }
            s0 = s1;
          }
        }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }

      return s0;
    }

    function peg$parseccssStartChar() {
      var s0, s1, s2, s3;
